_v2/models/src/snapshots/models__quirks__quirk_1_10_wrapper_with_one_branch.snap
---
source: models/src/quirks.rs
assertion_line: 119
expression: datatype
---
{
  "OneOf": {
    "discriminator_field": "type",
    "options": {
      "TRANSITION_DATA": {
        "Object": {
          "properties": {
            "criteria": {
              "Optional": {
                "data_type": {
                  "String": {}
                }
              }
            }
          }
        }
      }
    }
  }
}
