_v2/models/src/snapshots/models__quirks__quirk_1_1_discriminator_without_one_of.snap
---
source: models/src/quirks.rs
assertion_line: 47
expression: datatype
---
{
  "OneOf": {
    "discriminator_field": "featureType",
    "options": {
      "DATA": {
        "Object": {
          "properties": {
            "dataField": {
              "Optional": {
                "data_type": {
                  "String": {}
                }
              }
            }
          }
        }
      },
      "LOG": {
        "Object": {
          "properties": {
            "logField": {
              "Optional": {
                "data_type": {
                  "Boolean": {}
                }
              }
            }
          }
        }
      }
    }
  }
}
