_v2/models/src/snapshots/models__quirks__quirk_1_4_unsatisfiable_union_type_object_over_string_branches.snap
---
source: models/src/quirks.rs
assertion_line: 71
expression: datatype
---
{
  "Enum": [
    "FRANKFURT_DEU",
    "SYDNEY_AUS",
    "eastus",
    "westus"
  ]
}
