_v2/models/src/snapshots/models__quirks__quirk_1_5_children_redeclare_discriminator_property.snap
---
source: models/src/quirks.rs
assertion_line: 79
expression: datatype
---
{
  "OneOf": {
    "discriminator_field": "type",
    "options": {
      "TRANSITION_DATA": {
        "Object": {
          "properties": {
            "criteria": {
              "String": {}
            }
          }
        }
      }
    }
  }
}
