_v2/models/src/snapshots/models__quirks__quirk_1_8_mapping_keys_disagree_with_discriminator_enum.snap
---
source: models/src/quirks.rs
assertion_line: 103
expression: datatype
---
{
  "OneOf": {
    "discriminator_field": "providerName",
    "options": {
      "AWS": {
        "Object": {
          "properties": {
            "cidrBlock": {
              "Optional": {
                "data_type": {
                  "String": {}
                }
              }
            }
          }
        }
      },
      "AZURE": {
        "Object": {
          "properties": {
            "subnetId": {
              "Optional": {
                "data_type": {
                  "String": {}
                }
              }
            }
          }
        }
      },
      "GCP": {
        "Object": {
          "properties": {
            "networkName": {
              "Optional": {
                "data_type": {
                  "String": {}
                }
              }
            }
          }
        }
      }
    }
  }
}
