_v2/models/src/snapshots/models__quirks__quirk_1_9_any_of_used_as_a_tagged_union.snap
---
source: models/src/quirks.rs
assertion_line: 111
expression: datatype
---
{
  "Array": {
    "entries_type": {
      "OneOf": {
        "discriminator_field": "type",
        "options": {
          "asciiFolding": {
            "Object": {
              "properties": {
                "regularExpression": {
                  "Optional": {
                    "data_type": {
                      "String": {}
                    }
                  }
                }
              }
            }
          },
          "englishPossessive": {
            "Object": {
              "properties": {
                "type": {
                  "Enum": [
                    "englishPossessive"
                  ]
                }
              }
            }
          }
        }
      }
    }
  }
}
