_v2/models/src/snapshots/models__quirks__quirk_2_2_single_value_enum.snap
---
source: models/src/quirks.rs
assertion_line: 125
expression: datatype
---
{
  "Object": {
    "properties": {
      "mode": {
        "Enum": [
          "AVERAGE"
        ]
      }
    }
  }
}
