_v2/models/src/snapshots/models__quirks__quirk_2_3_unions_of_inline_enums.snap
---
source: models/src/quirks.rs
assertion_line: 133
expression: datatype
---
{
  "Enum": [
    "US_EAST_1",
    "US_WEST_1",
    "eastus",
    "westus"
  ]
}
